Remove old code, rewrite Koszyk to be a global dict

--- a/templates/koszyk.html
+++ b/templates/koszyk.html
@@ -12,43 +12,9 @@
     </ul>
     <a href="{{ url_for('remove_all_from_cart') }}">USUŃ WSZYSTKO</a>
 
-    <h2><a href="{{ url_for('checkout', cena=cena_calkowita) }}">ZAPŁAĆ {{ cena_calkowita }} PLN</a></h2>
+    <h2><a href="{{ url_for('checkout') }}">ZAPŁAĆ {{ cena_calkowita }} PLN</a></h2>
 {% else %}
     <h2>Brak produktów w koszyku.</h2>
 {% endif %}
-
-    {#{%if not g.user.Login%}#}
-{#    <h2>Login: <form action="{{ url_for('index') }}" method="post">#}
-{#        <span class="input text">{{ form.login.label }} {{ form.login}}</span>#}
-{#        <span class="input text">{{ form.password.label }} {{ form.password }}</span>#}
-{#        <span class="input submit"><input type="Submit" value="Login" /></span>#}
-{#    </form></h2>#}
-{#    <h2> Register: <form action="{{ url_for('index') }}" method="post">#}
-{#        <span class="input text">{{ form3.newlogin.label }} {{ form3.newlogin}}</span>#}
-{#        <span class="input text">{{ form3.newpassword.label }} {{ form3.newpassword }}</span>#}
-{#        <span class="input submit"><input type="Submit" value="Register" /></span>#}
-{#    </form></h2>#}
-{#{% endif %}#}
-{##}
-{#{% for post in posts %}#}
-{#<div>#}
-{#    <br>#}
-{#    <a href="{{ url_for('user',Login=post.author.Login) }}">{{post.author.Login}}</a> at {{post.CreationDate}}: <a href="{{ url_for('post',idPost=post.idPosts) }}">{{post.brief_content}}</a>#}
-{#    <br>#}
-{#</div>#}
-{#{% endfor %}#}
-{##}
-{#{%if g.user.Login%}#}
-{#    <br><br><br>#}
-{#    <form action="{{ url_for('index') }}" method="post">#}
-{#        <div class="input text">#}
-{#            {{ form2.content.label }} {{ form2.content }}#}
-{#        </div>#}
-{#        <div class="input submit">#}
-{#            <input type="Submit" value="Send" />#}
-{#        </div>#}
-{#    </form>#}
-{#{% endif %}#}
-
 
 {% endblock %}
