--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,13 +93,17 @@ h3 {
 form label {
   font-size: 1.2em;
   font-weight: bold;
-  display: block;
   padding: 10px 0;
 }
 
 form input#name,
+form input#surname,
+form input#address,
+form input#city,
+form input#country,
 form input#email,
 form input#subject {
+  display: block;
   width: 400px;
   background-color: #fafafa;
   -webkit-border-radius: 3px;
