--- a/templates/kasa.html
+++ b/templates/kasa.html
@@ -1,4 +1,4 @@
-{% extends "home.html" %}
+{% extends "top_bar.html" %}
 {% block body %}
 
 <h3>Proszę przysłać pieniądze. Łącznie należy się {{ cena }} PLN.</h3>
